# sncf

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: aliases.rs  client.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: disruptions.rs  mod.rs  next.rs  search.rs
