[package]
name = "sncf"
version = "1.0.0"
edition = "2024"
description = "SNCF train schedule CLI"
license = "MIT"
repository = "https://github.com/co42/sncf"
authors = ["Corentin Regal"]
readme = "README.md"
keywords = ["sncf", "train", "cli", "navitia"]
categories = ["command-line-utilities"]

[[bin]]
name = "sncf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "3"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
urlencoding = "2"
